--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-ui": "^1.3.2",
     "jquery": "^3.2.1",
     "jquery.animate": "^1.8.5",
+    "less-lib": "^1.0.3",
     "moment": "^2.18.1",
     "photoclip": "^3.1.1",
     "vue": "^2.3.3",
