--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "ajax-require": "^1.0.2",
     "element-theme": "^0.7.1",
     "element-ui": "^1.3.2",
     "jquery": "^3.2.1",
