--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
 .DS_Store
 .idea/
+
 node_modules/
 dist/
-static/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 test/unit/coverage
 test/e2e/reports
 selenium-debug.log
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
