--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "element-ui": "^1.3.7",
     "jquery": "^3.2.1",
     "jquery.animate": "^1.8.8",
-    "less-lib": "^1.0.4",
     "moment": "^2.18.1",
     "photoclip": "^3.2.0",
     "vue": "^2.3.4",
@@ -33,6 +32,7 @@
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-component": "^0.10.0",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-2": "^6.22.0",
@@ -74,6 +74,7 @@
     "karma-spec-reporter": "0.0.30",
     "karma-webpack": "^2.0.2",
     "less": "^2.7.2",
+    "less-lib": "^1.0.4",
     "less-loader": "^4.0.4",
     "lolex": "^1.5.2",
     "mocha": "^3.4.2",
