--- a/.babelrc
+++ b/.babelrc
@@ -13,10 +13,14 @@
       { "libraryName": "element-ui", "styleLibraryName": "theme-default" }
     ]]
   ],
+  "comments": false,
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
       "plugins": ["istanbul"]
+    },
+    "production": {
+      "plugins": ["transform-remove-console"]
     }
   }
 }
