--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "template",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "白俊杰 <625603381@qq.com>",
+  "author": "baijunjie <625603381@qq.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
+    "start": "npm run dev",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
@@ -21,44 +21,46 @@
     "jquery.animate": "^1.8.8",
     "moment": "^2.18.1",
     "photoclip": "^3.3.3",
-    "vue": "^2.3.4",
+    "vue": "^2.5.2",
     "vue-i18n": "^7.0.4",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.7.0",
-    "vuex": "^2.3.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
+    "autoprefixer": "^7.1.5",
     "babel-core": "^6.25.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-component": "^0.10.0",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-transform-remove-console": "^6.8.4",
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chai": "^3.5.0",
-    "chalk": "^1.1.3",
+    "chai": "^4.1.2",
+    "chalk": "^2.1.0",
     "chromedriver": "^2.30.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^4.0.0",
+    "cross-env": "^5.0.5",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.4",
     "element-theme": "^0.7.2",
     "element-theme-default": "^1.3.7",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.7",
+    "eslint": "^4.8.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.8.0",
-    "eslint-plugin-html": "^2.0.0",
+    "eslint-plugin-html": "^3.2.2",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.3",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
@@ -73,29 +75,29 @@
     "karma-phantomjs-shim": "^1.4.0",
     "karma-sinon-chai": "^1.3.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.30",
+    "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
-    "less": "^2.7.2",
+    "less": "2.7.1",
     "less-lib": "^1.0.6",
     "less-loader": "^4.0.4",
-    "lolex": "^1.5.2",
-    "mocha": "^3.4.2",
+    "mocha": "^4.0.1",
     "nightwatch": "^0.9.16",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.2",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "phantomjs-prebuilt": "^2.1.14",
+    "portfinder": "^1.0.13",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.8",
-    "sinon": "^2.3.6",
+    "sinon": "^4.0.1",
     "sinon-chai": "^2.11.0",
-    "url-loader": "^0.5.9",
-    "vue-loader": "^11.3.4",
-    "vue-style-loader": "^2.0.5",
+    "url-loader": "^0.6.2",
+    "vue-loader": "^13.3.0",
+    "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.3.4",
-    "webpack": "^2.6.1",
+    "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-hot-middleware": "^2.18.0",
