--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
     "stage-2"
   ],
   "plugins": [
+    "lodash",
     ["component", [
       { "libraryName": "element-ui", "styleLibraryName": "theme-default" }
     ]]
