--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-component": "^0.10.0",
     "babel-plugin-istanbul": "^4.1.4",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-remove-console": "^6.8.4",
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-2": "^6.22.0",
