--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "ajax-require": "^1.0.2",
-    "base-event-object": "^0.3.4",
+    "base-event-object": "^0.3.5",
     "element-ui": "^1.3.7",
     "jquery": "^3.2.1",
     "jquery.animate": "^1.8.8",
@@ -36,6 +36,7 @@
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-remove-console": "^6.8.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
