--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,7 @@
   "plugins": [
     "lodash",
     ["component", [
-      { "libraryName": "element-ui", "styleLibraryName": "theme-default" }
+      { "libraryName": "element-ui", "styleLibraryName": "theme-chalk" }
     ]]
   ],
   "comments": false,
