--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
     "stage-2"
   ],
   "plugins": [
+    "transform-vue-jsx",
     "lodash",
     ["component", [
       { "libraryName": "element-ui", "styleLibraryName": "theme-chalk" }
@@ -18,7 +19,7 @@
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
-      "plugins": ["istanbul"]
+      "plugins": ["transform-vue-jsx", "transform-es2015-modules-commonjs", "dynamic-import-node"]
     },
     "production": {
       "plugins": ["transform-remove-console"]
