--- a/package.json
+++ b/package.json
@@ -5,52 +5,52 @@
   "author": "baijunjie <625603381@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+    "unit": "jest --config test/unit/jest.conf.js --coverage",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "build": "node build/build.js"
   },
   "dependencies": {
-    "ajax-require": "^1.0.2",
+    "axios": "^0.17.1",
     "base-event-object": "^0.3.10",
     "element-ui": "^2.0.3",
     "jquery": "^3.2.1",
-    "jquery.animate": "^1.8.8",
+    "jquery.animate": "^1.8.9",
     "moment": "^2.18.1",
     "photoclip": "^3.3.3",
     "vue": "^2.5.2",
     "vue-i18n": "^7.0.4",
-    "vue-resource": "^1.3.4",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
     "babel-core": "^6.25.0",
     "babel-eslint": "^8.0.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-component": "^0.10.1",
-    "babel-plugin-istanbul": "^4.1.4",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-transform-remove-console": "^6.8.4",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-remove-console": "^6.8.5",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chai": "^4.1.2",
     "chalk": "^2.1.0",
     "chromedriver": "^2.30.1",
-    "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.5",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.4",
     "element-theme": "^0.7.2",
     "element-theme-default": "^1.3.7",
-    "eslint": "^4.8.0",
+    "eslint": "^4.14.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.8.0",
@@ -59,50 +59,39 @@
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
-    "friendly-errors-webpack-plugin": "^1.1.3",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-i18n-combine": "^1.1.1",
-    "html-webpack-plugin": "^2.29.0",
-    "http-proxy-middleware": "^0.17.3",
-    "inject-loader": "^3.0.0",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.2",
-    "less": "2.7.1",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.2.0",
+    "jest-serializer-vue": "^0.3.0",
+    "less": "^2.7.2",
     "less-lib": "^1.0.6",
     "less-loader": "^4.0.4",
-    "mocha": "^4.0.1",
+    "lodash": "^4.17.4",
     "nightwatch": "^0.9.16",
-    "opn": "^5.1.0",
+    "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
-    "phantomjs-prebuilt": "^2.1.14",
     "portfinder": "^1.0.13",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.8",
-    "sinon": "^4.0.1",
-    "sinon-chai": "^2.11.0",
+    "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.6.2",
+    "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.3.4",
+    "vue-template-compiler": "^2.5.2",
     "webpack": "^3.7.1",
-    "webpack-bundle-analyzer": "^2.8.2",
-    "webpack-dev-middleware": "^1.11.0",
-    "webpack-hot-middleware": "^2.18.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
