--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "base-event-object": "^0.3.10",
-    "element-ui": "^2.0.3",
+    "base-event-object": "^0.3.11",
     "jquery": "^3.2.1",
     "jquery.animate": "^1.8.9",
     "moment": "^2.18.1",
-    "photoclip": "^3.3.3",
+    "video.js": "^6.4.0",
     "vue": "^2.5.2",
     "vue-i18n": "^7.0.4",
     "vue-router": "^3.0.1"
@@ -48,8 +47,6 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.4",
-    "element-theme": "^0.7.2",
-    "element-theme-default": "^1.3.7",
     "eslint": "^4.14.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
