--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "gulp": "^3.9.1",
@@ -57,9 +56,10 @@
     "gulp-i18n-combine": "^1.1.1",
     "html-webpack-plugin": "^3.1.0",
     "less": "2.7.2",
-    "less-lib": "^1.1.1",
+    "less-lib": "^1.1.2",
     "less-loader": "^4.1.0",
     "lodash": "^4.17.5",
+    "mini-css-extract-plugin": "^0.3.0",
     "node-notifier": "^5.2.1",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "ora": "^2.0.0",
