--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "template",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "H5直播 project",
   "author": "baijunjie <625603381@qq.com>",
   "private": true,
   "scripts": {
